--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -31,6 +31,7 @@ a {
 
 .navbar {
     vertical-align: middle;
+    margin-bottom: 0;
 }
 
 .navbar-fixed-top {
@@ -117,26 +118,63 @@ th[scope="row"] {
 }
 
 .student-detail-student-name {
-    padding-top: 20px;
-    line-height: 1.3;
+    line-height: 1.2;
     color: white;
     font-size: 20px;
     word-wrap: break-word;
-    margin: 2px 5px;
+    padding: 20px 20px 0;
 }
 
 .student-detail-student-email {
-    padding-bottom: 24px;
-    margin: 0px 5px;
+    margin-bottom: 0;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 .student-detail-student-email-link, .student-detail-student-email-link:hover {
     color: white;
 }
 
-.student-detail-left-menu-count, .student-detail-left-menu-course {
+.student-detail-left-menu-course-line {
     height: 60px;
     border-bottom: 1px solid #D4D4D4;
+}
+
+.student-detail-left-menu-course-line p {
+    vertical-align: middle;
+    line-height: 60px;
+    margin-bottom: 0;
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #1c3144;
+}
+
+.student-detail-left-menu-courses {
+    min-height: 60px;
+    border-bottom: 1px solid #D4D4D4;
+}
+
+
+.student-detail-left-menu-courses p {
+    width: 70%;
+    margin-top: 16px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-size: 18px;
+    color: #1c3144;
+    display: inline-block;
+    word-wrap: break-word;
+}
+
+.student-detail-left-menu-course-status {
+    float: right;
+    padding-top: 16px;
+    padding-right: 16px;
+}
+
+.student-detail-left-menu-courses:hover {
+    cursor: pointer;
 }
 
 .student-detail-summary {
@@ -147,7 +185,7 @@ th[scope="row"] {
 }
 
 .student-detail-summary-title {
-    color: #333;
+    color: #1c3144;
     padding-left: 35px;
     margin-top: 30px;
     margin-bottom: 30px;
