--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -11,12 +11,13 @@
       <p class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</p>
       <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
     </div>
-    <div class="student-detail-left-menu-count">
-      <span>COURSES</span><span></span>
+    <div class="student-detail-left-menu-course-line">
+      <p>COURSES</p>
     </div>
-    <div class="student-detail-left-menu-course" ng-repeat="classSite in classSites | orderBy:sortType:sortReverse">
-      <a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{classSite.class_site.description}}</a>
-      <span status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
+    <div class="student-detail-left-menu-courses" ng-repeat="classSite in classSites | orderBy:sortType:sortReverse"
+      ng-click="goTo('/students/'+student.username+'/class_sites/'+classSite.class_site.code+'/')">
+      <p>{{classSite.class_site.description}}</p>
+      <span class="student-detail-left-menu-course-status" status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
     </div>
   </div>
 
