Add responsive week label to the graphs

--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -37,6 +37,7 @@
 
         showXAxis="true"
         showYAxis="true"
+        xAxisLabel="Week"
         showLegend="true"
         showControls="false"
         forceY="[0,100]"
@@ -54,6 +55,7 @@
 
         showXAxis="true"
         showYAxis="true"
+        xAxisLabel="Week"
         showLegend="true"
         showControls="false"
         forceY="[0,100]"
