--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -2,10 +2,7 @@
   <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
     <h3 class="main-h3">
       Course Site: {{ classSite.class_site.description }}
-      <span status-tooltip
-          status="classSite.status"
-          tooltiptext="classSite.status | colorToStatus">
-      </span>
+      <span class="student-detail-class-site-status" status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
     </h3>
   </div>
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
