--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -51,10 +51,10 @@
       <td class="hide-small">{{ student.univ_id }}</td>
       <td>
         <a href="#/students/{{ student.username }}/class_sites/{{ class_site_status.code }}/"
-           class="class-site-status-link"
-           ng-repeat="class_site_status in student.class_site_statuses track by $index"
-           status-tooltip status="class_site_status.status"
-           tooltiptext="class_site_status.name + ': ' + (class_site_status.status | colorToStatus)">
+          ng-repeat="class_site_status in student.class_site_statuses track by $index" class="class-site-status-link">
+          <span status-tooltip status="class_site_status.status"
+            tooltiptext="filterStudentCourseStatus((class_site_status.status | colorToStatus), class_site_status.name)">
+          </span>
         </a>
       </td>
       <td class="hide-small">
