--- a/sespa/app/views/student.html
+++ b/sespa/app/views/student.html
@@ -17,11 +17,11 @@
       <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
     </div>
     <div class="student-detail-left-menu-course-line" ng-click="goTo('/students/'+student.username+'/')">
-      <p>COURSES</p>
+      <p>STUDENT SUMMARY</p>
     </div>
     <div class="student-detail-left-menu-courses" ng-repeat="classSite in classSites | orderBy:sortType:sortReverse"
       ng-click="goTo('/students/'+student.username+'/class_sites/'+classSite.class_site.code+'/')">
-      <p>{{classSite.class_site.description}}</p>
+      <p>{{classSite.class_site.description}}dfkda;fkd s;lfkdas;lf fdak;fldks ;fkla;f;asdl;kfa</p>
       <span class="student-detail-left-menu-course-status" status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
     </div>
   </div>
