--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,4 +1,4 @@
-<h2 class="student-detail-summary-title">PERFORMANCE SUMMARY</h2>
+<h2 class="student-detail-summary-title">STUDENT SUMMARY</h2>
 <hr class="main-no-margin-top"/>
 <div class="student-detail-summary-content" ng-include="'views/student_class_site_list.html'" ></div>
 <div class="student-info">
