Fix a bug present in PR 149
A string of random characters present after class site was removed. Unrelated: The spelling of 'Sourse' is corrected.

--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -8,7 +8,7 @@
 <h3>Terms</h3>
 <p ng-repeat="term in classSite.terms">{{term}}</p>
 
-<h3>Sourse System</h3>
+<h3>Source System</h3>
 <p>{{classSite.source_system}}</p>
 
 <a href="api/class_sites/{{classSite.code}}/assignments/download/"><button>Download Assignment</button></a>
