Added student and advisor detail view
Added student and advisor detail view. Modified code in views.py to make handling of class based views consistent. Modified the visual layout of Student and Advisor List View to make it consistent with current version.

--- a/seumich/templates/index.html
+++ b/seumich/templates/index.html
@@ -19,6 +19,7 @@
     <script src="{% static 'bootstrap/dist/js/bootstrap.js' %}"></script>
     <script src="{% static 'd3/d3.js' %}"></script>
     <script src="{% static 'nvd3/nv.d3.js' %}"></script>
+    {% block head %}{% endblock %}
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
